--- a/runtime/load_jtag.conf
+++ b/runtime/load_jtag.conf
@@ -49,7 +49,7 @@ programming_script =
     #
     # Find the specific JTAG programmer we're going to use
     #
-    current_hw_target [get_hw_targets ${jtag_id}]
+    current_hw_target [get_hw_devices ${part}]
 
     #
     # Connect to the target FPGA
